--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body{
+html, body{
     margin:0;
     padding:0;
     width:100%;
@@ -23,8 +23,8 @@ p#textTopo{
 }
 
 div.clientes{
-    height: 600px;
-    width: 800px;
+    height: 800px;
+    width: 500px;
     margin-left: 100px;
     margin-top: 100px;
     background-color: white;
@@ -82,7 +82,7 @@ div#img1{
     background-repeat: no-repeat;
     background-position: 20%;
     background-size: cover;
-    background-image: url('../img/medico1.jpg');
+    background-image: url('');
     border-radius: 5%;
     margin: 0px;
 }
@@ -93,7 +93,7 @@ div#img2{
     background-repeat: no-repeat;
     background-position: 20%;
     background-size: cover;
-    background-image: url('../img/medico2.jpg');
+    background-image: url('');
     border-radius: 5%;
     margin: 0px;
 }
@@ -104,7 +104,7 @@ div#img3{
     background-repeat: no-repeat;
     background-position: 20%;
     background-size: cover;
-    background-image: url('../img/medico3.jpg');
+    background-image: url('');
     border-radius: 5%;
     margin: 0px;
 }
@@ -115,8 +115,47 @@ div#img4{
     background-repeat: no-repeat;
     background-position: 20%;
     background-size: cover;
-    background-image: url('../img/medico4.jpg');
+    background-image: url('');
     border-radius: 5%;
     margin: 0px;
 }
 
+div#textRodape{
+    padding-top: 40px;
+    width: 1000px;
+    height: 400px;
+}
+
+h1#about{
+    font-size: 60px;
+    text-align:left;
+    margin-left: 10%;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bolder;
+    text-align: left;
+    color: rgb(228, 222, 222);
+}
+
+div#rodape{
+    margin-top: 100px;
+    width: 100%;
+    height: 500px;
+    background-color: rgb(44, 71, 44);
+    position: relative;
+}
+
+p#textAbout{
+    margin-top: 60px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bolder;
+    text-align: justify;
+    margin-left: 10%;
+    font-size: 20px;
+    color: rgb(228, 222, 222);
+}
+
+iframe#mapa{
+    display: flex;
+    margin-left: 1200px;
+    border-radius: 10px;
+}
